--- a/app/src/main/res/layout/activity_evaluate.xml
+++ b/app/src/main/res/layout/activity_evaluate.xml
@@ -23,7 +23,7 @@
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="@dimen/dimen_43"
+            android:layout_height="@dimen/dimen_50"
             android:background="@color/line_fc">
 
             <View
@@ -34,7 +34,7 @@
             <ImageView
                 android:id="@+id/image_processed_czbz_back"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="50dp"
                 android:layout_centerVertical="true"
                 android:layout_marginLeft="@dimen/dimen_8"
                 android:padding="@dimen/dimen_7"
@@ -48,7 +48,7 @@
                 android:gravity="center"
                 android:text="评价报告"
                 android:textColor="@color/colorTitle"
-                android:textSize="20sp" />
+                android:textSize="22sp" />
 
             <ImageView
                 android:id="@+id/ic_filter"
@@ -68,7 +68,9 @@
                 android:orientation="vertical"
                 android:background="@color/colorPrimary"
                 android:layout_width="match_parent"
-                android:layout_height="85dp">
+                android:layout_height="93dp"
+                android:layout_alignParentTop="true"
+                android:layout_alignParentStart="true">
                 <LinearLayout
                     android:layout_marginTop="18dp"
                     android:orientation="horizontal"
@@ -83,7 +85,7 @@
 
                         android:text="100"
                         android:textColor="@color/white"
-                        android:textSize="32dp" />
+                        android:textSize="35dp" />
                     <TextView
                         android:text="分"
                         android:textColor="@color/white"
@@ -108,7 +110,7 @@
                         android:layout_marginLeft="7dp"
                         android:text="朝阳变电站"
                         android:textColor="@color/white"
-                        android:textSize="20dp" />
+                        android:textSize="22dp" />
                 </LinearLayout>
             </RelativeLayout>
             <View
@@ -216,15 +218,15 @@
                                         android:layout_marginTop="2dp"
                                         android:layout_marginBottom="2dp"
                                         android:src="@drawable/ic_person"
-                                        android:layout_width="wrap_content"
-                                        android:layout_height="match_parent" />
+                                        android:layout_width="17dp"
+                                        android:layout_height="17dp" />
                                     <TextView
                                         android:id="@+id/tv_USER"
                                         android:layout_width="wrap_content"
                                         android:layout_height="wrap_content"
                                         android:text="签字人"
                                         android:textColor="#808080"
-                                        android:textSize="15sp" />
+                                        android:textSize="17sp" />
 
                                 </LinearLayout>
 
@@ -240,15 +242,15 @@
                                     android:layout_marginTop="2dp"
                                     android:layout_marginBottom="2dp"
                                     android:src="@drawable/ic_time"
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="match_parent" />
+                                    android:layout_width="17dp"
+                                    android:layout_height="17dp" />
                                 <TextView
                                     android:id="@+id/tv_DATE"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:text="得分日期："
                                     android:textColor="#808080"
-                                    android:textSize="15sp" />
+                                    android:textSize="17sp" />
 
                             </LinearLayout>
                         </LinearLayout>
