--- a/app/src/main/res/layout/activity_app_start.xml
+++ b/app/src/main/res/layout/activity_app_start.xml
@@ -7,7 +7,7 @@
 
     <ImageView
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="80dp"
+        android:layout_marginTop="100dp"
         android:src="@mipmap/ic_logo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
@@ -16,6 +16,6 @@
         android:layout_alignParentBottom="true"
         android:layout_marginBottom="20dp"
         android:src="@mipmap/ic_company"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_width="300dp"
+        android:layout_height="40dp" />
 </RelativeLayout>
