--- a/app/src/main/res/layout/activity_jyh_cache_edit.xml
+++ b/app/src/main/res/layout/activity_jyh_cache_edit.xml
@@ -16,13 +16,14 @@
 
         <View
             android:id="@+id/view_title"
+
             android:layout_width="match_parent"
             android:layout_height="@dimen/dimen_25"
             android:background="@color/line_fc" />
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="@dimen/dimen_43"
+            android:layout_height="@dimen/dimen_50"
             android:background="@color/line_fc">
 
             <View
@@ -33,7 +34,7 @@
             <ImageView
                 android:id="@+id/image_processed_czbz_back"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="50dp"
                 android:layout_centerVertical="true"
                 android:layout_marginLeft="@dimen/dimen_8"
                 android:padding="@dimen/dimen_7"
@@ -47,7 +48,7 @@
                 android:gravity="center"
                 android:text="评价报告"
                 android:textColor="@color/colorTitle"
-                android:textSize="20sp" />
+                android:textSize="22sp" />
 
             <ImageView
                 android:id="@+id/ic_filter"
@@ -62,8 +63,70 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
+            <RelativeLayout
+                android:id="@+id/lo_head"
+                android:orientation="vertical"
+                android:background="@color/colorPrimary"
+                android:layout_width="match_parent"
+                android:layout_height="93dp"
+                android:layout_alignParentTop="true"
+                android:layout_alignParentStart="true">
+                <LinearLayout
+                    android:layout_marginTop="18dp"
+                    android:orientation="horizontal"
+                    android:layout_centerHorizontal="true"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content">
+                    <TextView
+                        android:id="@+id/tv_FZ"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
 
+
+                        android:text="100"
+                        android:textColor="@color/white"
+                        android:textSize="35dp" />
+                    <TextView
+                        android:text="分"
+                        android:textColor="@color/white"
+                        android:textSize="16dp"
+                        android:layout_marginLeft="4dp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content" />
+
+                </LinearLayout>
+                <LinearLayout
+                    android:layout_alignParentBottom="true"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerHorizontal="true"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:id="@+id/tv_ZFMC"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+
+                        android:layout_marginLeft="7dp"
+                        android:text="朝阳变电站"
+                        android:textColor="@color/white"
+                        android:textSize="22dp" />
+                </LinearLayout>
+            </RelativeLayout>
+            <View
+                android:layout_below="@+id/lo_head"
+                android:background="@drawable/corner_bottom"
+                android:layout_width="match_parent"
+                android:layout_height="40dp"/>
             <LinearLayout
+                android:layout_below="@+id/lo_head"
+                android:layout_marginTop="10dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:layout_marginBottom="0dp"
+                android:elevation="5dp"
+
+
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
@@ -72,151 +135,133 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="vertical">
-
                     <LinearLayout
-                        android:layout_width="wrap_content"
-                        android:layout_height="27dp"
-                        android:orientation="horizontal">
-
-                        <ImageView
-                            android:layout_width="15dp"
-                            android:layout_height="15dp"
-                            android:layout_gravity="center_vertical"
-                            android:layout_marginLeft="10dp"
-                            android:src="@drawable/ic_house" />
-
-                        <TextView
-                            android:id="@+id/tv_ZFMC"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center_vertical"
-                            android:layout_marginLeft="7dp"
-                            android:textColor="@color/black"
-                            android:textSize="17sp" />
-                    </LinearLayout>
-
-                    <View
-                        android:layout_width="match_parent"
-                        android:layout_height="1px"
-                        android:background="#cccccc" />
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:orientation="horizontal"
+                        android:elevation="5dp"
+                        android:layout_marginBottom="5dp"
+                        android:background="@drawable/cornor_btn"
                         android:paddingBottom="10dp"
-                        android:paddingLeft="10dp"
-                        android:paddingRight="10dp"
-                        android:paddingTop="13dp">
+                        android:orientation="vertical"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
 
                         <LinearLayout
-                            android:id="@+id/ll_btxx"
-                            android:layout_width="0dp"
+                            android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_weight="3.5"
-                            android:minHeight="115dp"
-                            android:orientation="vertical">
-
-                        </LinearLayout>
-
-                        <RelativeLayout
-                            android:layout_width="0dp"
-                            android:layout_height="match_parent"
-                            android:layout_weight="2"
-                            android:orientation="horizontal">
-
-                            <nari.app.BianDianYingYong.jinyi.customview_jinyi.CircleNumberProgressBar
-                                android:id="@+id/pr_fz"
-                                android:layout_width="wrap_content"
+                            android:orientation="horizontal"
+                            android:paddingBottom="19dp"
+                            android:paddingLeft="17dp"
+                            android:paddingRight="17dp"
+                            >
+                            <nari.app.BianDianYingYong.customview.AutoNextLineLinearlayout
+                                android:id="@+id/ll_btxx"
+                                android:layout_width="0dp"
                                 android:layout_height="wrap_content"
-                                android:layout_centerInParent="true"
-                                android:progress="100"
-                                app:cnpb_circle_radius="45dp"
+                                android:layout_weight="3.5"
+                                android:minHeight="115dp"
+                                android:orientation="horizontal">
 
-                                />
 
-                            <TextView
-                                android:layout_width="wrap_content"
+                            </nari.app.BianDianYingYong.customview.AutoNextLineLinearlayout>
+                            <!--<LinearLayout
+                                android:id="@+id/ll_btxx"
+                                android:layout_width="0dp"
                                 android:layout_height="wrap_content"
-                                android:layout_gravity="center_vertical"
-                                android:text="得分"
-                                android:textColor="@color/black"
-                                android:textSize="16sp" />
+                                android:layout_weight="3.5"
+                                android:minHeight="115dp"
+                                android:orientation="vertical">
 
-                            <TextView
-                                android:id="@+id/tv_FZ"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
+                            </LinearLayout>-->
 
-                                android:layout_centerInParent="true"
-                                android:text="100分"
-                                android:textColor="@color/black"
-                                android:textSize="16sp" />
+                            <RelativeLayout
+                                android:visibility="gone"
+                                android:layout_width="0dp"
+                                android:layout_height="match_parent"
+                                android:layout_weight="2"
+                                android:orientation="horizontal">
 
-                        </RelativeLayout>
-                    </LinearLayout>
-
-                    <View
-                        android:layout_width="match_parent"
-                        android:layout_height="1px"
-                        android:background="#cccccc" />
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:orientation="horizontal"
-                        android:paddingBottom="10dp"
-                        android:paddingLeft="10dp"
-                        android:paddingRight="10dp"
-                        android:paddingTop="8dp">
-
-                        <LinearLayout
-                            android:layout_width="0dp"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="1"
-                            android:orientation="vertical">
-
-                            <LinearLayout
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content">
-
-                                <TextView
-                                    android:id="@+id/tv_USER"
+                                <nari.app.BianDianYingYong.jinyi.customview_jinyi.CircleNumberProgressBar
+                                    android:id="@+id/pr_fz"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
-                                    android:text="签字人："
-                                    android:textColor="#808080"
-                                    android:textSize="15sp" />
+                                    android:layout_centerInParent="true"
+                                    android:progress="100"
+                                    app:cnpb_circle_radius="45dp"
+
+                                    />
+
+
+
+
+                            </RelativeLayout>
+                        </LinearLayout>
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:orientation="horizontal"
+                            android:background="#fcfcfc"
+                            android:paddingLeft="17dp"
+                            android:paddingRight="17dp"
+                            android:paddingBottom="5dp"
+                            android:paddingTop="18dp">
+
+                            <LinearLayout
+                                android:layout_width="0dp"
+                                android:layout_height="wrap_content"
+                                android:layout_weight="1"
+                                android:orientation="vertical">
+
+                                <LinearLayout
+                                    android:orientation="horizontal"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content">
+                                    <ImageView
+                                        android:layout_marginTop="2dp"
+                                        android:layout_marginBottom="2dp"
+                                        android:src="@drawable/ic_person"
+                                        android:layout_width="17dp"
+                                        android:layout_height="17dp" />
+                                    <TextView
+                                        android:id="@+id/tv_USER"
+                                        android:layout_width="wrap_content"
+                                        android:layout_height="wrap_content"
+                                        android:text="签字人"
+                                        android:textColor="#808080"
+                                        android:textSize="17sp" />
+
+                                </LinearLayout>
+
 
                             </LinearLayout>
 
-
-                        </LinearLayout>
-
-                        <LinearLayout
-                            android:layout_width="0dp"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="1"
-                            android:orientation="horizontal">
-
-                            <TextView
-                                android:id="@+id/tv_DATE"
-                                android:layout_width="wrap_content"
+                            <LinearLayout
+                                android:layout_width="0dp"
                                 android:layout_height="wrap_content"
-                                android:text="得分日期："
-                                android:textColor="#808080"
-                                android:textSize="15sp" />
+                                android:layout_weight="1"
+                                android:orientation="horizontal">
+                                <ImageView
+                                    android:layout_marginTop="2dp"
+                                    android:layout_marginBottom="2dp"
+                                    android:src="@drawable/ic_time"
+                                    android:layout_width="17dp"
+                                    android:layout_height="17dp" />
+                                <TextView
+                                    android:id="@+id/tv_DATE"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:text="得分日期："
+                                    android:textColor="#808080"
+                                    android:textSize="17sp" />
 
+                            </LinearLayout>
                         </LinearLayout>
                     </LinearLayout>
 
-                    <View
-                        android:layout_width="match_parent"
-                        android:layout_height="7dp"
-                        android:background="#f2f2f2" />
-
                     <ListView
+                        android:background="@drawable/cornor_btn"
+                        android:padding="5dp"
                         android:id="@+id/lv_pjdx"
+                        android:scrollbars="none"
+                        android:layout_marginTop="10dp"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent">
 
@@ -235,6 +280,7 @@
                 android:layout_alignParentLeft="true"
                 android:layout_marginBottom="13dp"
                 android:layout_marginLeft="20dp" />
+
         </RelativeLayout>
     </LinearLayout>
 
