--- a/app/src/main/res/layout/activity_main_jinyi.xml
+++ b/app/src/main/res/layout/activity_main_jinyi.xml
@@ -22,7 +22,7 @@
         <RelativeLayout
             android:id="@+id/title"
             android:layout_width="match_parent"
-            android:layout_height="@dimen/dimen_43"
+            android:layout_height="@dimen/dimen_50"
             android:background="@color/line_fc">
 
             <TextView
@@ -32,15 +32,15 @@
                 android:layout_centerVertical="true"
                 android:text="精益化评价"
                 android:textColor="@color/colorFc"
-                android:textSize="@dimen/textsize_20" />
+                android:textSize="22dp" />
 
             <ImageView
                 android:id="@+id/image_search_menu"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="22dp"
+                android:layout_height="22dp"
                 android:layout_alignParentRight="true"
                 android:layout_centerVertical="true"
-                android:padding="@dimen/dimen_10"
+                android:layout_marginRight="10dp"
                 android:src="@mipmap/search_menu" />
         </RelativeLayout>
         <RelativeLayout
@@ -61,7 +61,7 @@
                 android:background="@drawable/cornor_btn"
                 android:layout_centerHorizontal="true"
                 android:layout_width="match_parent"
-                android:layout_height="35dp">
+                android:layout_height="40dp">
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
@@ -77,7 +77,7 @@
                         android:background="@drawable/btn_left_corner"
 
                         android:gravity="center"
-                        android:textSize="18sp"
+                        android:textSize="22dp"
 
                         android:textColor="@color/pjbg_seceen_text_selector"
                         android:layout_height="match_parent" />
@@ -88,7 +88,7 @@
                         android:background="@drawable/btn_right_cornor"
                         android:button="@null"
                         android:text="评价任务"
-                        android:textSize="18sp"
+                        android:textSize="22dp"
                         android:textColor="@color/pjbg_seceen_text_selector"
                         android:gravity="center"
                         android:layout_height="match_parent" />
