--- a/app/src/main/res/layout/item_activity_pjrw_adapter.xml
+++ b/app/src/main/res/layout/item_activity_pjrw_adapter.xml
@@ -12,17 +12,17 @@
 
     <View
         android:layout_width="match_parent"
-        android:layout_height="@dimen/dimen_10"
+        android:layout_height="@dimen/dimen_11"
         android:background="@color/color_f2f2f2" />
 
     <LinearLayout
         android:background="@drawable/cornor_btn"
         android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="93dp">
+        android:layout_height="106dp">
         <RelativeLayout
             android:orientation="vertical"
-            android:layout_width="90dp"
+            android:layout_width="99dp"
             android:layout_height="match_parent">
             <TextView
                 android:id="@+id/tv_weipingjia"
@@ -35,7 +35,7 @@
                 android:layout_alignParentRight="true"
                 android:layout_marginRight="13dp"
                 android:textColor="@color/colorPrimary"
-                android:textSize="@dimen/textsize_17" />
+                android:textSize="@dimen/textsize_20" />
             <TextView
                 android:id="@+id/tv_pjrwDetails_point"
                 android:layout_width="wrap_content"
@@ -48,11 +48,11 @@
                 android:layout_alignParentRight="true"
                 android:layout_marginRight="32dp"
                 android:textColor="#00a2ff"
-                android:textSize="32dp" />
+                android:textSize="35dp" />
             <TextView
                 android:id="@+id/tv_fen"
                 android:layout_alignParentRight="true"
-                android:translationY="8dp"
+                android:translationY="7dp"
                 android:textStyle="bold"
                 android:layout_marginRight="15dp"
                 android:layout_width="wrap_content"
@@ -86,7 +86,7 @@
                     android:layout_marginLeft="@dimen/dimen_13"
                     android:text="设备名称"
                     android:textColor="@color/color_4d4d4d"
-                    android:textSize="@dimen/textsize_17" />
+                    android:textSize="@dimen/textsize_20" />
 
                 <TextView
                     android:id="@+id/tv_pjrwDetails_sbmc"
@@ -97,11 +97,11 @@
                     android:layout_toRightOf="@+id/tv_1"
                     android:text="1号主变"
                     android:textColor="#333333"
-                    android:textSize="@dimen/textsize_17" />
+                    android:textSize="@dimen/textsize_20" />
                 <ImageView
                     android:id="@+id/tv_pjrwDetails_tj"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="50dp"
+                    android:layout_height="20dp"
                     android:layout_alignParentRight="true"
                     android:layout_centerVertical="true"
                     android:layout_marginRight="@dimen/dimen_13"
@@ -129,7 +129,7 @@
 
                         android:text="电站名称"
                         android:textColor="#999999"
-                        android:textSize="@dimen/textsize_15" />
+                        android:textSize="@dimen/textsize_17" />
 
                     <TextView
                         android:id="@+id/tv_pjrwDetails_dzmc"
@@ -140,7 +140,7 @@
                         android:layout_toRightOf="@+id/tv_dianzhangmingcheng"
                         android:text="XXX变电站"
                         android:textColor="#666666"
-                        android:textSize="@dimen/textsize_15" />
+                        android:textSize="@dimen/textsize_17" />
 
                     <TextView
                         android:id="@+id/tv_pingjiashijian"
@@ -152,7 +152,7 @@
                         android:layout_marginTop="@dimen/dimen_10"
                         android:text="评价时间"
                         android:textColor="#999999"
-                        android:textSize="@dimen/textsize_15" />
+                        android:textSize="@dimen/textsize_17" />
 
                     <TextView
                         android:id="@+id/tv_pjrwDetails_pjsj"
@@ -164,7 +164,7 @@
                         android:layout_toRightOf="@+id/tv_pingjiashijian"
                         android:text="2016/11/09 19:54"
                         android:textColor="#666666"
-                        android:textSize="@dimen/textsize_15" />
+                        android:textSize="@dimen/textsize_17" />
                 </RelativeLayout>
             </LinearLayout>
         </LinearLayout>
