--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -46,8 +46,75 @@
                 android:src="@mipmap/popupwindow_lxhc" />
         </RelativeLayout>
 
+        <RelativeLayout
+            android:background="@color/color_f2f2f2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <View
+                android:background="@color/line_fc"
+                android:layout_width="match_parent"
+                android:layout_height="17dp"/>
+            <nari.app.BianDianYingYong.jinyi.customview_jinyi.MyRadioGroup
+                android:id="@+id/rg_change"
+                android:layout_marginBottom="5dp"
+                android:layout_marginLeft="30dp"
+                android:layout_marginRight="30dp"
+                android:orientation="horizontal"
+                android:elevation="5dp"
+                android:background="@drawable/cornor_btn"
+                android:layout_centerHorizontal="true"
+                android:layout_width="match_parent"
+                android:layout_height="40dp">
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
 
+                    android:orientation="horizontal">
+                    <RadioButton
+                        android:id="@+id/rb_top1"
+                        android:layout_width="0dp"
+                        android:text="待处理"
+                        android:button="@null"
+                        android:layout_weight="1"
+                        android:checked="true"
+                        android:background="@drawable/btn_left_corner"
+
+                        android:gravity="center"
+                        android:textSize="22dp"
+
+                        android:textColor="@color/pjbg_seceen_text_selector"
+                        android:layout_height="match_parent" />
+                    <RadioButton
+                        android:id="@+id/rb_top2"
+                        android:layout_width="0dp"
+                        android:text="执行中"
+                        android:button="@null"
+                        android:layout_weight="1"
+                        android:checked="false"
+                        android:background="@drawable/rb_center_bg"
+
+                        android:gravity="center"
+                        android:textSize="22dp"
+
+                        android:textColor="@color/pjbg_seceen_text_selector"
+                        android:layout_height="match_parent" />
+                    <RadioButton
+                        android:id="@+id/rb_top3"
+                        android:layout_width="0dp"
+                        android:layout_weight="1"
+                        android:background="@drawable/btn_right_cornor"
+                        android:button="@null"
+                        android:text="已归档"
+                        android:textSize="22dp"
+                        android:textColor="@color/pjbg_seceen_text_selector"
+                        android:gravity="center"
+                        android:layout_height="match_parent" />
+                </LinearLayout>
+            </nari.app.BianDianYingYong.jinyi.customview_jinyi.MyRadioGroup>
+
+        </RelativeLayout>
         <android.support.design.widget.TabLayout
+            android:visibility="gone"
             android:id="@+id/tab_bar"
             android:layout_width="match_parent"
             android:layout_height="@dimen/dimen_40"
