--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -128,7 +128,7 @@
 
         <android.support.v4.view.ViewPager
             android:id="@+id/vp_main_activity"
-            android:layout_width="480dp"
+            android:layout_width="match_parent"
             android:layout_marginTop="@dimen/dimen_10"
             android:layout_gravity="center"
             android:layout_height="match_parent" />
