--- a/app/src/main/res/layout/item_exe_activity.xml
+++ b/app/src/main/res/layout/item_exe_activity.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:orientation="vertical">
 
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="50dp"
         android:orientation="vertical">
 
         <LinearLayout
@@ -21,7 +21,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="@dimen/dimen_5"
-                android:layout_weight="0.5"
+                android:layout_weight="1"
                 android:text=""
                 android:textColor="@color/color_7b7b7b"
                 android:textSize="@dimen/textsize_17" />
@@ -40,7 +40,7 @@
                 android:id="@+id/tv_czxm_czsj"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
+                android:layout_weight="2"
                 android:gravity="center"
                 android:text=""
                 android:textColor="@color/color_7b7b7b"
