--- a/app/src/main/res/layout/custom_date_picker.xml
+++ b/app/src/main/res/layout/custom_date_picker.xml
@@ -17,7 +17,7 @@
             android:layout_centerVertical="true"
             android:padding="10dp"
             android:text="取消"
-            android:textColor="@color/time_green"
+            android:textColor="@color/colorPrimary"
             android:textSize="16sp" />
 
         <TextView
@@ -36,7 +36,7 @@
             android:layout_height="wrap_content"
             android:padding="10dp"
             android:text="确定"
-            android:textColor="@color/time_green"
+            android:textColor="@color/colorPrimary"
             android:textSize="16sp"
             android:layout_alignParentTop="true"
             android:layout_alignParentRight="true"
@@ -76,7 +76,7 @@
                 android:layout_weight="1"
                 android:gravity="center"
                 android:text="年"
-                android:textColor="#01CAE8"
+                android:textColor="@color/colorPrimary"
                 android:textSize="18sp" />
 
             <nari.app.BianDianYingYong.customview.DatePickerView
@@ -91,7 +91,7 @@
                 android:layout_weight="1"
                 android:gravity="center"
                 android:text="月"
-                android:textColor="#01CAE8"
+                android:textColor="@color/colorPrimary"
                 android:textSize="18sp" />
 
             <nari.app.BianDianYingYong.customview.DatePickerView
@@ -106,7 +106,7 @@
                 android:layout_weight="1"
                 android:gravity="center"
                 android:text="日"
-                android:textColor="#01CAE8"
+                android:textColor="@color/colorPrimary"
                 android:textSize="18sp" />
 
             <nari.app.BianDianYingYong.customview.DatePickerView
@@ -122,7 +122,7 @@
                 android:layout_weight="1"
                 android:gravity="center"
                 android:text="时"
-                android:textColor="#01CAE8"
+                android:textColor="@color/colorPrimary"
                 android:textSize="18sp" />
 
             <nari.app.BianDianYingYong.customview.DatePickerView
@@ -138,7 +138,7 @@
                 android:layout_weight="1"
                 android:gravity="center"
                 android:text="分"
-                android:textColor="#01CAE8"
+                android:textColor="@color/colorPrimary"
                 android:textSize="18sp" />
 
         </LinearLayout>
